<resources>
    <string name="app_name">TickTockTimePieces</string>
    <string name="Category">Category</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="watches">Watches</string>
    <string name="my_cart">My Cart</string>
    <string name="Welcome_Guest">Welcome Guest</string>
    <string name="Welcome">Welcome</string>
    <string name="about">About</string>
    <string name="watcheslibrary">Watches</string>
    <string name="log_out">Log Out</string>
    <string name="place_order">Place Order</string>
    <string name="login">LOGIN</string>

    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="sign_in_text_on_registration_activity">Sign in text on registration activity</string>
    <string name="todo">TODO</string>
    <string name="solanki_yogesh">Solanki Yogesh</string>
    <string name="thanks_for_visit">Thanks For Visit</string>
    <string name="solankiyogesh3500_gmail_com">Solankiyogesh3500@gmail.com</string>
    <string name="_91_9904654107">+91 9904654107</string>
    <string name="sy_yogesh">SY yogesh</string>
    <string name="sydeveloper">SYDEVELOPER</string>
    <string name="android_developer">Android Developer</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="coding_with_pratik">CODING WITH PRATIK</string>
    <string name="_8980752334">8980752334</string>
    <string name="pratik_vala">PRATIK VALA</string>
    <string name="technical_vrushabh">Technical Vrushabh</string>
    <string name="vrushabh1906201_gmail_com">vrushabh1906201@gmail.com</string>
    <string name="vrushabh_jansari">Vrushabh Jansari</string>
    <string name="_91_7201825986">+91 7201825986</string>
    <string name="vrutik_goti">Vrutik Goti</string>
    <string name="vg_coding">VG CODING</string>
    <string name="vgcoding_gmail_com">VGCODING@GMAIL.COM</string>
    <string name="vrutik_surat">VRUTIK </string>
    <string name="_6353763017">6353763017</string>
    <string name="developer">Developer</string>
    <string name="vrushah_mochi">vrushah mochi</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_team">My Team</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="quantity">Quantity:</string>
    <string name="addtocart">AddToCart</string>
    <string name="facebook_app_id">355424412387071</string>
    <string name="fb_login_protocol_scheme">fb355424412387071</string>
    <string name="get_otp_code">GET OTP CODE</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_with_phone">Continue With Phone</string>
</resources>