<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_1"
    android:id="@+id/animatedlayout"
    tools:context=".AboutActiviti">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageprofile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/pratik" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:id="@+id/title"
        android:layout_below="@id/imageprofile"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/pratik_vala"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:id="@+id/skill"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/android_developer"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bgrmborder"
        android:id="@+id/imgwave"
        android:layout_below="@id/skill"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imgwave"
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70sp"
            android:src="@drawable/youtube"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/coding_with_pratik"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout1"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70sp"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="pratikvala92gmail.com"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout1"
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout2"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70sp"
            android:src="@drawable/fb"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="PRATIKVALA"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout2"
        android:layout_marginTop="30dp"
        android:id="@+id/linear_layout3"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70sp"
            android:src="@drawable/wap"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/_8980752334"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:text="@string/thanks_for_visit"
        android:textStyle="bold"
        android:textSize="18sp"
        android:clickable="false"
        android:background="@drawable/btnsignin_gradient"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"/>


</RelativeLayout>