<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EEEEEE"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_height="wrap_content"
    tools:context=".MyTeamsActivity">
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="#EF0B0B"
        android:text="@string/developer"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/yogesh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:src="@drawable/imgp"
                android:layout_height="match_parent"
                android:background="#fff"
                android:contentDescription="@string/Category"
                android:scaleType="fitCenter"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/solanki_yogesh"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/android_developer"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/vrushabh"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#fff"
                android:src="@drawable/vrushabh"
                android:contentDescription="@string/Category"
                android:scaleType="fitCenter"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/vrushabh_jansari"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/android_developer"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/pratik"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#fff"
                android:src="@drawable/pratik"
                android:id="@+id/image_watch"
                android:contentDescription="@string/Category"
                android:scaleType="fitCenter"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/text_watch_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/pratik_vala"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_watch_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/text_watch_price"
                    android:layout_width="match_parent"
                    android:text="@string/android_developer"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/text_watch_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/vrutik"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#fff"
                android:src="@drawable/vrutik"
                android:contentDescription="@string/Category"
                android:scaleType="fitCenter"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/vrutik_goti"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"

                    android:text="@string/android_developer" android:layout_height="wrap_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>